added cli x clip; python layer

--- a/spacemacs.conf
+++ b/spacemacs.conf
@@ -2,6 +2,8 @@
 ;; This file is loaded by Spacemacs at startup.
 ;; It must be stored in your home directory.
 
+
+
 (defun dotspacemacs/layers ()
   "Layer configuration:
 This function should only modify configuration layer settings."
@@ -10,6 +12,9 @@ This function should only modify configuration layer settings."
    ;; `+distribution'. For now available distributions are `spacemacs-base'
    ;; or `spacemacs'. (default 'spacemacs)
    dotspacemacs-distribution 'spacemacs
+
+   ;; user-config-jyo
+   package-enable-at-startup nil
 
    ;; Lazy installation of layers (i.e. layers are installed only when a file
    ;; with a supported type is opened). Possible values are `all', `unused'
@@ -32,7 +37,8 @@ This function should only modify configuration layer settings."
 
    ;; List of configuration layers to load.
    dotspacemacs-configuration-layers
-   '(javascript
+   '(python
+     javascript
      html
      ;; ----------------------------------------------------------------
      ;; Example of useful layers you may want to use right away.
@@ -42,25 +48,39 @@ This function should only modify configuration layer settings."
      auto-completion
      ;; better-defaults
      emacs-lisp
-     git
+     ;; git
      helm
+     python
+     ;;lsp
+
      (lsp :variables
           lsp-enable-on-type-formatting nil
           lsp-prefer-flymake nil)
+
      c-c++
      markdown
      multiple-cursors
      org
-     ;; (shell :variables
-     ;;        shell-default-height 30
-     ;;        shell-default-position 'bottom)
+     which-key
+     (shell :variables
+            shell-default-height 30
+            shell-default-position 'bottom)
      spell-checking
      syntax-checking
      ;; version-control
+
+     ;; (c-c++ :variables
+     ;;      c-c++-backend 'lsp-ccls)
+
      treemacs)
 
-   (c-c++ :variables
-          c-c++-backend 'lsp-ccls)
+   dotspacemacs/elpa-archives
+   '(
+     ("melpa" . "https://melpa.org/packages/")
+     ("gnu" . "https://elpa.gnu.org/packages/")
+     ("org" . "https://orgmode.org/elpa/")
+     )
+
    ;; List of additional packages that will be installed without being wrapped
    ;; in a layer (generally the packages are installed only and should still be
    ;; loaded using load/require/use-package in the user-config section below in
@@ -73,6 +93,9 @@ This function should only modify configuration layer settings."
                                       vs-dark-theme
                                       spacemacs-theme
                                       doom-themes
+                                      vterm
+                                      python-mode
+                                      python
                                       tron-legacy
                                       )
 
@@ -251,7 +274,7 @@ It should only modify the values of Spacemacs settings."
    ;; with 2 themes variants, one dark and one light)
    dotspacemacs-themes '(darkokai
                          vs-dark
-                         2tron-legacy
+                         tron-legacy
                          doom-emacs-darker
                          spacemacs-dark
                          spacemacs-light)
@@ -274,7 +297,7 @@ It should only modify the values of Spacemacs settings."
    ;; Point size is recommended, because it's device independent. (default 10.0)
    dotspacemacs-default-font '("Fira code"
                                :size 11
-                               :weight bold 
+                               :weight bold
                                :width normal)
 
    ;; The leader key (default "SPC")
@@ -391,12 +414,12 @@ It should only modify the values of Spacemacs settings."
    ;; A value from the range (0..100), in increasing opacity, which describes
    ;; the transparency level of a frame when it's inactive or deselected.
    ;; Transparency can be toggled through `toggle-transparency'. (default 90)
-   dotspacemacs-inactive-transparency 50
+   dotspacemacs-inactive-transparency 70
 
    ;; A value from the range (0..100), in increasing opacity, which describes the
    ;; transparency level of a frame background when it's active or selected. Transparency
    ;; can be toggled through `toggle-background-transparency'. (default 90)
-   dotspacemacs-background-transparency 70
+   dotspacemacs-background-transparency 80
 
    ;; If non-nil show the titles of transient states. (default t)
    dotspacemacs-show-transient-state-title t
@@ -562,7 +585,7 @@ default it calls `spacemacs/load-spacemacs-env' which loads the environment
 variables declared in `~/.spacemacs.env' or `~/.spacemacs.d/.spacemacs.env'.
 See the header of this file for more information."
   (spacemacs/load-spacemacs-env)
-)
+  )
 
 (defun dotspacemacs/user-init ()
   "Initialization for user code:
@@ -570,7 +593,7 @@ This function is called immediately after `dotspacemacs/init', before layer
 configuration.
 It is mostly for variables that should be set before packages are loaded.
 If you are unsure, try setting them in `dotspacemacs/user-config' first."
-)
+  )
 
 
 (defun dotspacemacs/user-load ()
@@ -578,7 +601,20 @@ If you are unsure, try setting them in `dotspacemacs/user-config' first."
 This function is called only while dumping Spacemacs configuration. You can
 `require' or `load' the libraries of your choice that will be included in the
 dump."
-)
+  )
+
+;; user  configuration defun
+;; Make Emacs use xclip for copy/paste
+(defun copy-to-x-clipboard ()
+  "Copy the current region to the system clipboard using xclip."
+  (interactive)
+  (if (use-region-p)
+      (let* ((xclip-command "xclip -selection clipboard")
+             (text (buffer-substring-no-properties (region-beginning) (region-end))))
+        (with-temp-buffer
+          (insert text)
+          (call-process-region (point-min) (point-max) "xclip" nil nil nil "-selection" "clipboard")))
+    (message "No region selected")))
 
 
 (defun dotspacemacs/user-config ()
@@ -590,6 +626,17 @@ before packages are loaded."
 
   ;; Enable transparency
   (spacemacs/enable-transparency)
+
+  (org-babel-do-load-languages
+   'org-babel-load-languages
+   '((emacs-lisp . t)
+     (python . t)
+     (sh . t)
+     (C . t)
+     ;; Add other languages as needed
+     ))
+  ;; Optional: Don't ask for confirmation before running code blocks
+  (setq org-confirm-babel-evaluate nil)
   )
 
 
@@ -600,62 +647,60 @@ before packages are loaded."
 This is an auto-generated function, do not modify its content directly, use
 Emacs customize menu instead.
 This function is called at the very end of Spacemacs initialization."
-(custom-set-variables
- ;; custom-set-variables was added by Custom.
- ;; If you edit it by hand, you could mess it up, so be careful.
- ;; Your init file should contain only one such instance.
- ;; If there is more than one, they won't work right.
- '(ansi-color-faces-vector
-   [default bold shadow italic underline bold bold-italic bold])
- '(ansi-color-names-vector
-   ["#242728" "#ff0066" "#63de5d" "#E6DB74" "#06d8ff" "#ff8eff" "#53f2dc" "#f8fbfc"])
- '(compilation-message-face 'default)
- '(evil-want-Y-yank-to-eol nil)
- '(frame-brackground-mode 'dark)
- '(highlight-changes-colors '("#ff8eff" "#ab7eff"))
- '(highlight-tail-colors
-   '(("#323342" . 0)
-     ("#63de5d" . 20)
-     ("#4BBEAE" . 30)
-     ("#1DB4D0" . 50)
-     ("#9A8F21" . 60)
-     ("#A75B00" . 70)
-     ("#F309DF" . 85)
-     ("#323342" . 100)))
- '(hl-sexp-background-color "#1c1f26")
- '(hl-todo-keyword-faces
-   '(("TODO" . "#dc752f")
-     ("NEXT" . "#dc752f")
-     ("THEM" . "#2d9574")
-     ("PROG" . "#4f97d7")
-     ("OKAY" . "#4f97d7")
-     ("DONT" . "#f2241f")
-     ("FAIL" . "#f2241f")
-     ("DONE" . "#86dc2f")
-     ("NOTE" . "#b1951d")
-     ("KLUDGE" . "#b1951d")
-     ("HACK" . "#b1951d")
-     ("TEMP" . "#b1951d")
-     ("FIXME" . "#dc752f")
-     ("XXX+" . "#dc752f")
-     ("\\?\\?\\?+" . "#dc752f")))
- '(ispell-dictionary nil)
- '(magit-diff-use-overlays nil)
- '(org-fontify-done-headline nil)
- '(org-fontify-todo-headline nil)
- '(package-selected-packages
-   '(json-mode exwm-x vscdark-theme atom-dark-theme darkman vs-dark-theme markdown-preview-mode ccls melancholy-theme tron-legacy-theme adwaita-dark-theme chyla-dark-theme darkokai-theme gruber-darker-theme material-theme dracula-theme doom-themes ace-jump-helm-line ace-link aggressive-indent all-the-icons auto-compile auto-dictionary auto-highlight-symbol centered-cursor-mode clean-aindent-mode column-enforce-mode define-word devdocs dired-quick-sort drag-stuff dumb-jump editorconfig elisp-def elisp-slime-nav emr clang-format list-utils eval-sexp-fu evil-anzu anzu evil-args evil-cleverparens paredit evil-collection annalist evil-exchange evil-goggles evil-iedit-state iedit evil-indent-plus evil-lion evil-lisp-state evil-matchit evil-mc evil-nerd-commenter evil-numbers evil-org evil-surround evil-textobj-line evil-tutor evil-visual-mark-mode evil-visualstar expand-region eyebrowse fancy-battery flx-ido flx flycheck-elsa flycheck-package package-lint flycheck-pos-tip pos-tip flycheck flyspell-correct-helm flyspell-correct gh-md gnuplot golden-ratio google-translate helm-ag helm-c-yasnippet helm-comint helm-company company hl-todo macrostep org-project-capture paradox cmake-mode yasnippet-snippets ws-butler writeroom-mode winum which-key volatile-highlights vim-powerline vi-tilde-fringe uuidgen use-package treemacs-projectile treemacs-persp treemacs-icons-dired toc-org term-cursor symon symbol-overlay string-inflection string-edit-at-point spacemacs-whitespace-cleanup spacemacs-purpose-popwin spaceline space-doc smartparens restart-emacs request rainbow-delimiters quickrun popwin popup pcre2el password-generator overseer org-superstar org-rich-yank org-present org-pomodoro org-mime org-download org-cliplink org-category-capture open-junk-file nameless multi-line markdown-toc lorem-ipsum link-hint inspector info+ indent-guide hybrid-mode hungry-delete htmlize holy-mode highlight-parentheses highlight-numbers highlight-indentation hide-comnt helm-xref helm-themes helm-swoop helm-purpose helm-projectile helm-org-rifle helm-org helm-mode-manager helm-make helm-descbinds evil-unimpaired evil-evilified-state evil-escape dotenv-mode diminish bind-map))
- '(pdf-view-midnight-colors '("#b2b2b2" . "#262626"))
- '(pos-tip-background-color "#E6DB74")
- '(pos-tip-foreground-color "#242728")
- '(weechat-color-list
-   (unspecified "#242728" "#323342" "#F70057" "#ff0066" "#86C30D" "#63de5d" "#BEB244" "#E6DB74" "#40CAE4" "#06d8ff" "#FF61FF" "#ff8eff" "#00b2ac" "#53f2dc" "#f8fbfc" "#ffffff")))
-(custom-set-faces
- ;; custom-set-faces was added by Custom.
- ;; If you edit it by hand, you could mess it up, so be careful.
- ;; Your init file should contain only one such instance.
- ;; If there is more than one, they won't work right.
- )
-)
-
-
+  (custom-set-variables
+   ;; custom-set-variables was added by Custom.
+   ;; If you edit it by hand, you could mess it up, so be careful.
+   ;; Your init file should contain only one such instance.
+   ;; If there is more than one, they won't work right.
+   '(ansi-color-faces-vector
+     [default bold shadow italic underline bold bold-italic bold])
+   '(ansi-color-names-vector
+     ["#242728" "#ff0066" "#63de5d" "#E6DB74" "#06d8ff" "#ff8eff" "#53f2dc" "#f8fbfc"])
+   '(compilation-message-face 'default)
+   '(evil-want-Y-yank-to-eol nil)
+   '(frame-brackground-mode 'dark)
+   '(highlight-changes-colors '("#ff8eff" "#ab7eff"))
+   '(highlight-tail-colors
+     '(("#323342" . 0)
+       ("#63de5d" . 20)
+       ("#4BBEAE" . 30)
+       ("#1DB4D0" . 50)
+       ("#9A8F21" . 60)
+       ("#A75B00" . 70)
+       ("#F309DF" . 85)
+       ("#323342" . 100)))
+   '(hl-sexp-background-color "#1c1f26")
+   '(hl-todo-keyword-faces
+     '(("TODO" . "#dc752f")
+       ("NEXT" . "#dc752f")
+       ("THEM" . "#2d9574")
+       ("PROG" . "#4f97d7")
+       ("OKAY" . "#4f97d7")
+       ("DONT" . "#f2241f")
+       ("FAIL" . "#f2241f")
+       ("DONE" . "#86dc2f")
+       ("NOTE" . "#b1951d")
+       ("KLUDGE" . "#b1951d")
+       ("HACK" . "#b1951d")
+       ("TEMP" . "#b1951d")
+       ("FIXME" . "#dc752f")
+       ("XXX+" . "#dc752f")
+       ("\\?\\?\\?+" . "#dc752f")))
+   '(ispell-dictionary nil)
+   '(magit-diff-use-overlays nil)
+   '(org-fontify-done-headline nil)
+   '(org-fontify-todo-headline nil)
+   '(package-selected-packages
+     '(python-mode blacken code-cells company-anaconda anaconda-mode counsel-gtags counsel swiper ivy cython-mode dap-mode lsp-docker bui yaml ggtags helm-cscope helm-pydoc importmagic epc ctable concurrent live-py-mode lsp-pyright nose pip-requirements pipenv load-env-vars pippel poetry transient py-isort pydoc pyenv-mode pythonic pylookup pytest pyvenv sphinx-doc xcscope yapfify vterm dired-filter lsp-mode json-mode exwm-x vscdark-theme atom-dark-theme darkman vs-dark-theme markdown-preview-mode ccls melancholy-theme tron-legacy-theme adwaita-dark-theme chyla-dark-theme darkokai-theme gruber-darker-theme material-theme dracula-theme doom-themes ace-jump-helm-line ace-link aggressive-indent all-the-icons auto-compile auto-dictionary auto-highlight-symbol centered-cursor-mode clean-aindent-mode column-enforce-mode define-word devdocs dired-quick-sort drag-stuff dumb-jump editorconfig elisp-def elisp-slime-nav emr clang-format list-utils eval-sexp-fu evil-anzu anzu evil-args evil-cleverparens paredit evil-collection annalist evil-exchange evil-goggles evil-iedit-state iedit evil-indent-plus evil-lion evil-lisp-state evil-matchit evil-mc evil-nerd-commenter evil-numbers evil-org evil-surround evil-textobj-line evil-tutor evil-visual-mark-mode evil-visualstar expand-region eyebrowse fancy-battery flx-ido flx flycheck-elsa flycheck-package package-lint flycheck-pos-tip pos-tip flycheck flyspell-correct-helm flyspell-correct gh-md gnuplot golden-ratio google-translate helm-ag helm-c-yasnippet helm-comint helm-company company hl-todo macrostep org-project-capture paradox cmake-mode yasnippet-snippets ws-butler writeroom-mode winum which-key volatile-highlights vim-powerline vi-tilde-fringe uuidgen use-package treemacs-projectile treemacs-persp treemacs-icons-dired toc-org term-cursor symon symbol-overlay string-inflection string-edit-at-point spacemacs-whitespace-cleanup spacemacs-purpose-popwin spaceline space-doc smartparens restart-emacs request rainbow-delimiters quickrun popwin popup pcre2el password-generator overseer org-superstar org-rich-yank org-present org-pomodoro org-mime org-download org-cliplink org-category-capture open-junk-file nameless multi-line markdown-toc lorem-ipsum link-hint inspector info+ indent-guide hybrid-mode hungry-delete htmlize holy-mode highlight-parentheses highlight-numbers highlight-indentation hide-comnt helm-xref helm-themes helm-swoop helm-purpose helm-projectile helm-org-rifle helm-org helm-mode-manager helm-make helm-descbinds evil-unimpaired evil-evilified-state evil-escape dotenv-mode diminish bind-map))
+   '(pdf-view-midnight-colors '("#b2b2b2" . "#262626"))
+   '(pos-tip-background-color "#E6DB74")
+   '(pos-tip-foreground-color "#242728")
+   '(weechat-color-list
+     (unspecified "#242728" "#323342" "#F70057" "#ff0066" "#86C30D" "#63de5d" "#BEB244" "#E6DB74" "#40CAE4" "#06d8ff" "#FF61FF" "#ff8eff" "#00b2ac" "#53f2dc" "#f8fbfc" "#ffffff")))
+  (custom-set-faces
+   ;; custom-set-faces was added by Custom.
+   ;; If you edit it by hand, you could mess it up, so be careful.
+   ;; Your init file should contain only one such instance.
+   ;; If there is more than one, they won't work right.
+   )
+  )
