Work laptop .spacemacs conf update
shift width change
babel add languages

working state;
known issues: cli emacs not showing heading emoji

--- a/spacemacs.conf
+++ b/spacemacs.conf
@@ -14,8 +14,10 @@ This function should only modify configuration layer settings."
    dotspacemacs-distribution 'spacemacs
 
    ;; user-config-jyo
-   package-enable-at-startup nil
+   python-shell-interpreter "/usr/local/bin/python3"
 
+   package-enable-at-startup nil
+   tab-width 8
    ;; Lazy installation of layers (i.e. layers are installed only when a file
    ;; with a supported type is opened). Possible values are `all', `unused'
    ;; and `nil'. `unused' will lazy install only unused layers (i.e. layers
@@ -131,12 +133,12 @@ It should only modify the values of Spacemacs settings."
    ;;
    ;; (default nil)
    dotspacemacs-enable-emacs-pdumper nil
-
+   visual-line-mode t
    ;; Name of executable file pointing to emacs 27+. This executable must be
    ;; in your PATH.
    ;; (default "emacs")
    dotspacemacs-emacs-pdumper-executable-file "emacs"
-
+   tab-width 8
    ;; Name of the Spacemacs dump file. This is the file will be created by the
    ;; portable dumper in the cache directory under dumps sub-directory.
    ;; To load it when starting Emacs add the parameter `--dump-file'
@@ -477,7 +479,7 @@ It should only modify the values of Spacemacs settings."
    ;; If non-nil pressing the closing parenthesis `)' key in insert mode passes
    ;; over any automatically added closing parenthesis, bracket, quote, etc...
    ;; This can be temporary disabled by pressing `C-q' before `)'. (default nil)
-   dotspacemacs-smart-closing-parenthesis nil
+   dotspacemacs-smart-closing-parenthesis t
 
    ;; Select a scope to highlight delimiters. Possible values are `any',
    ;; `current', `all' or `nil'. Default is `all' (highlight any scope and
@@ -626,15 +628,13 @@ before packages are loaded."
 
   ;; Enable transparency
   (spacemacs/enable-transparency)
-
   (org-babel-do-load-languages
    'org-babel-load-languages
-   '((emacs-lisp . t)
-     (python . t)
-     (sh . t)
-     (C . t)
-     ;; Add other languages as needed
-     ))
+   '((python . t)
+     (java . t)
+     (emacs-lisp . t)  ; For Lisp
+     (C . t)           ; For C
+     (shell . t)))        ; For Bash
   ;; Optional: Don't ask for confirmation before running code blocks
   (setq org-confirm-babel-evaluate nil)
   )
@@ -690,8 +690,9 @@ This function is called at the very end of Spacemacs initialization."
    '(magit-diff-use-overlays nil)
    '(org-fontify-done-headline nil)
    '(org-fontify-todo-headline nil)
+   '(org-safe-remote-resources '("\\`https://xilinx\\.github\\.io\\(?:/\\|\\'\\)"))
    '(package-selected-packages
-     '(python-mode blacken code-cells company-anaconda anaconda-mode counsel-gtags counsel swiper ivy cython-mode dap-mode lsp-docker bui yaml ggtags helm-cscope helm-pydoc importmagic epc ctable concurrent live-py-mode lsp-pyright nose pip-requirements pipenv load-env-vars pippel poetry transient py-isort pydoc pyenv-mode pythonic pylookup pytest pyvenv sphinx-doc xcscope yapfify vterm dired-filter lsp-mode json-mode exwm-x vscdark-theme atom-dark-theme darkman vs-dark-theme markdown-preview-mode ccls melancholy-theme tron-legacy-theme adwaita-dark-theme chyla-dark-theme darkokai-theme gruber-darker-theme material-theme dracula-theme doom-themes ace-jump-helm-line ace-link aggressive-indent all-the-icons auto-compile auto-dictionary auto-highlight-symbol centered-cursor-mode clean-aindent-mode column-enforce-mode define-word devdocs dired-quick-sort drag-stuff dumb-jump editorconfig elisp-def elisp-slime-nav emr clang-format list-utils eval-sexp-fu evil-anzu anzu evil-args evil-cleverparens paredit evil-collection annalist evil-exchange evil-goggles evil-iedit-state iedit evil-indent-plus evil-lion evil-lisp-state evil-matchit evil-mc evil-nerd-commenter evil-numbers evil-org evil-surround evil-textobj-line evil-tutor evil-visual-mark-mode evil-visualstar expand-region eyebrowse fancy-battery flx-ido flx flycheck-elsa flycheck-package package-lint flycheck-pos-tip pos-tip flycheck flyspell-correct-helm flyspell-correct gh-md gnuplot golden-ratio google-translate helm-ag helm-c-yasnippet helm-comint helm-company company hl-todo macrostep org-project-capture paradox cmake-mode yasnippet-snippets ws-butler writeroom-mode winum which-key volatile-highlights vim-powerline vi-tilde-fringe uuidgen use-package treemacs-projectile treemacs-persp treemacs-icons-dired toc-org term-cursor symon symbol-overlay string-inflection string-edit-at-point spacemacs-whitespace-cleanup spacemacs-purpose-popwin spaceline space-doc smartparens restart-emacs request rainbow-delimiters quickrun popwin popup pcre2el password-generator overseer org-superstar org-rich-yank org-present org-pomodoro org-mime org-download org-cliplink org-category-capture open-junk-file nameless multi-line markdown-toc lorem-ipsum link-hint inspector info+ indent-guide hybrid-mode hungry-delete htmlize holy-mode highlight-parentheses highlight-numbers highlight-indentation hide-comnt helm-xref helm-themes helm-swoop helm-purpose helm-projectile helm-org-rifle helm-org helm-mode-manager helm-make helm-descbinds evil-unimpaired evil-evilified-state evil-escape dotenv-mode diminish bind-map))
+     '(org-brain org-mind-map python-mode blacken code-cells company-anaconda anaconda-mode counsel-gtags counsel swiper ivy cython-mode dap-mode lsp-docker bui yaml ggtags helm-cscope helm-pydoc importmagic epc ctable concurrent live-py-mode lsp-pyright nose pip-requirements pipenv load-env-vars pippel poetry transient py-isort pydoc pyenv-mode pythonic pylookup pytest pyvenv sphinx-doc xcscope yapfify vterm dired-filter lsp-mode json-mode exwm-x vscdark-theme atom-dark-theme darkman vs-dark-theme markdown-preview-mode ccls melancholy-theme tron-legacy-theme adwaita-dark-theme chyla-dark-theme darkokai-theme gruber-darker-theme material-theme dracula-theme doom-themes ace-jump-helm-line ace-link aggressive-indent all-the-icons auto-compile auto-dictionary auto-highlight-symbol centered-cursor-mode clean-aindent-mode column-enforce-mode define-word devdocs dired-quick-sort drag-stuff dumb-jump editorconfig elisp-def elisp-slime-nav emr clang-format list-utils eval-sexp-fu evil-anzu anzu evil-args evil-cleverparens paredit evil-collection annalist evil-exchange evil-goggles evil-iedit-state iedit evil-indent-plus evil-lion evil-lisp-state evil-matchit evil-mc evil-nerd-commenter evil-numbers evil-org evil-surround evil-textobj-line evil-tutor evil-visual-mark-mode evil-visualstar expand-region eyebrowse fancy-battery flx-ido flx flycheck-elsa flycheck-package package-lint flycheck-pos-tip pos-tip flycheck flyspell-correct-helm flyspell-correct gh-md gnuplot golden-ratio google-translate helm-ag helm-c-yasnippet helm-comint helm-company company hl-todo macrostep org-project-capture paradox cmake-mode yasnippet-snippets ws-butler writeroom-mode winum which-key volatile-highlights vim-powerline vi-tilde-fringe uuidgen use-package treemacs-projectile treemacs-persp treemacs-icons-dired toc-org term-cursor symon symbol-overlay string-inflection string-edit-at-point spacemacs-whitespace-cleanup spacemacs-purpose-popwin spaceline space-doc smartparens restart-emacs request rainbow-delimiters quickrun popwin popup pcre2el password-generator overseer org-superstar org-rich-yank org-present org-pomodoro org-mime org-download org-cliplink org-category-capture open-junk-file nameless multi-line markdown-toc lorem-ipsum link-hint inspector info+ indent-guide hybrid-mode hungry-delete htmlize holy-mode highlight-parentheses highlight-numbers highlight-indentation hide-comnt helm-xref helm-themes helm-swoop helm-purpose helm-projectile helm-org-rifle helm-org helm-mode-manager helm-make helm-descbinds evil-unimpaired evil-evilified-state evil-escape dotenv-mode diminish bind-map))
    '(pdf-view-midnight-colors '("#b2b2b2" . "#262626"))
    '(pos-tip-background-color "#E6DB74")
    '(pos-tip-foreground-color "#242728")
